class updated